@@ -1,3 +1,6 @@
+HEAD
+	+ Add enable/disable input vfs full_audit module feature for commercial edition
+	+ Add "samba settings" tab to the FileSharing composite
 6.1.1
 	+ Add users and groups importer GUI feature for commercial edition
 	+ Add users and groups exporter GUI feature for commercial edition
